--- a/templates/default/MariaDB.repo.erb
+++ b/templates/default/MariaDB.repo.erb
@@ -2,6 +2,6 @@
 # http://mariadb.org/mariadb/repositories/
 [mariadb]
 name = MariaDB
-baseurl = http://yum.mariadb.org/5.5/centos6-amd64
+baseurl = http://yum.mariadb.org/5.5/centos6-<%= node['rails_desktop']['mariadb']['arch'] %>
 gpgkey=https://yum.mariadb.org/RPM-GPG-KEY-MariaDB
 gpgcheck=1
